--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 .DS_Store
+gfkg_notes.aux
+gfkg_notes.bbl
+gfkg_notes.blg
+gfkg_notes.fdb_latexmk
+gfkg_notes.fls
+gfkg_notes.log
+gfkg_notes.out
+gfkg_notes.synctex.gz
+gfkg_notes.toc
